Removed tatamibot profile in dev mode

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
             </activation>
             <properties>
                 <!-- Spring profiles available : tatamibot, metrics -->
-                <spring.profiles.active>tatamibot</spring.profiles.active>
+                <spring.profiles.active></spring.profiles.active>
                 <jetty.port>8080</jetty.port>
                 <jetty.scanIntervalSeconds>1</jetty.scanIntervalSeconds>
                 <log4j.loglevel>DEBUG</log4j.loglevel>
