Elasticsearch index splited in three indexes : one for each data type.

--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -21,7 +21,7 @@ cassandra.keyspace=tatami
 tatami.search.engine.implementation=${tatami.search.engine}
 
 #Elastic Search configuration
-elasticsearch.indexName=tatami
+elasticsearch.indexNamePrefix=tatami
 elasticsearch.cluster.name=tatamiCluster
 elasticsearch.cluster.nodes=127.0.0.1
 elasticsearch.cluster.default.communication.port=9300
