--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -50,7 +50,7 @@ search.engine=${tatami.search.engine}
 # Elastic Search configuration
 elasticsearch.engine.mode=${tatami.elasticsearch.engine.mode}
 
-elasticsearch.indexName=tatami
+elasticsearch.indexNamePrefix=tatami
 # Must be the same as the ES cluster.name variable (see elasticsearch.yml)
 elasticsearch.cluster.name=tatamiCluster
 #Cluster nodes example: elasticsearch.cluster.nodes=10.160.0.12,10.160.0.13:9300
