--- a/pom.xml
+++ b/pom.xml
@@ -298,7 +298,7 @@
                 <ehcache.maxBytesLocalHeap>64M</ehcache.maxBytesLocalHeap>
                 <tatami.version>${project.version}</tatami.version>
                 <tatami.url>http://localhost:8080</tatami.url>
-                <tatami.ldapauth.url>ldap://localhost:389/dc=ippon,dc=fr</tatami.ldapauth.url>
+                <tatami.ldapauth.url>ldap://localhost:389</tatami.ldapauth.url>
                 <tatami.ldapauth.searchbase>dc=ippon,dc=fr</tatami.ldapauth.searchbase>
                 <tatami.ldapauth.searchfilter>(uid={0})</tatami.ldapauth.searchfilter>
                 <tatami.smtp.host></tatami.smtp.host>
@@ -519,7 +519,8 @@
         <elasticsearch.version>0.20.6</elasticsearch.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.5.8</slf4j.version>
-        <httpclient.core.version>4.1</httpclient.core.version>
+        <httpclient.core.version>4.2.2</httpclient.core.version> <!-- pour compatiblité selenium -->
+        <httpclient.client.version>4.2.2</httpclient.client.version> <!-- pour compatiblité selenium -->
         <hector.version>1.1-3</hector.version>
         <hector.mapper.version>3.1-07</hector.mapper.version>
         <persistence.api.version>1.0.2</persistence.api.version>
@@ -541,7 +542,7 @@
         <yammer.metrics.version>2.2.0</yammer.metrics.version>
         <camel.version>2.10.4</camel.version>
 
-        <selenium.version>2.25.0</selenium.version>
+        <selenium.version>2.31.0</selenium.version>
 
         <!-- Maven plugins -->
         <maven.compiler.version>3.0</maven.compiler.version>
@@ -729,6 +730,11 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpcore</artifactId>
             <version>${httpclient.core.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${httpclient.client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.geronimo.javamail</groupId>
