--- a/pom.xml
+++ b/pom.xml
@@ -980,7 +980,7 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
-                    <!-- Force alphabetical order to have a reproducable build -->
+                    <!-- Force alphabetical order to have a reproducible build -->
                     <runOrder>alphabetical</runOrder>
                     <!-- 
                     <runOrder>reversealphabetical</runOrder>
