--- a/pom.xml
+++ b/pom.xml
@@ -535,6 +535,7 @@
         <commons.io.version>2.3</commons.io.version>
         <junit.version>4.11</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
+        <awaitility.version>1.3.5</awaitility.version>
         <cassandra.unit.version>1.1.2.1</cassandra.unit.version>
         <mockito.version>1.9.0</mockito.version>
         <rome.version>1.0</rome.version>
@@ -928,6 +929,12 @@
             <artifactId>hamcrest-library</artifactId>
             <version>${hamcrest.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+              <groupId>com.jayway.awaitility</groupId>
+              <artifactId>awaitility</artifactId>
+              <version>${awaitility.version}</version>
+              <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.cassandraunit</groupId>
