--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,6 +12,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 # Change the level of messages for various packages.
 log4j.logger.fr.ippon.tatami=${log4j.loglevel}
 
+log4j.logger.org.atmosphere.cpr=WARN
 log4j.logger.com.yammer.metrics=WARN
 log4j.logger.me.prettyprint=WARN
 log4j.logger.net.sf.ehcache=WARN
