--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -35,18 +35,12 @@ cassandra.host=127.0.0.1:9160
 cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
-# Search engine configuration : you can use either Elastic Search or Lucene
-# - Elastic Search works as a cluster, and can handle larger loads than Lucene
-# - Lucene is much easier to set up, and is more performant for smaller installations
+# Search engine configuration : you can use either Elastic Search in embedded or in remote mode
+# - In embedded mode, Elastic Search runs inside Tatami : this is useful for development, test, and small installations
+# - In remote mode, Elastic Search runs as a separate node (or even cluster), which is useful for large installations
 #
-# If in doubt, use Lucene (property search.engine=lucene)
-# You can change your search engine later : a full reindex of the search engine can be triggered on the
+# You can change this configuration mode later : a full reindex of the search engine can be triggered on the
 # administration page
-
-# Search engine configuration (could be either 'lucene' or 'elasticsearch')
-search.engine=${tatami.search.engine}
-
-# Elastic Search configuration
 elasticsearch.engine.mode=${tatami.elasticsearch.engine.mode}
 
 elasticsearch.indexNamePrefix=tatami
@@ -55,10 +49,6 @@ elasticsearch.cluster.name=tatamiCluster
 #Cluster nodes example: elasticsearch.cluster.nodes=10.160.0.12,10.160.0.13:9300
 elasticsearch.cluster.nodes=127.0.0.1:9300
 elasticsearch.cluster.default.communication.port=9300
-
-#Lucene configuration
-lucene.path=${tatami.lucene.path.data}
-lucene.language=${tatami.lucene.language}
 
 #Tatami Bot configuration
 tatami.bot.enabled=${tatami.bot.enabled}
