--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -17,15 +17,10 @@ cassandra.host=localhost:9171
 cassandra.cluster=Tatami cluster
 cassandra.keyspace=tatami
 
-#Search engine configuration (could be either 'lucene' or 'elasticsearch')
-tatami.search.engine.implementation=${tatami.search.engine}
-
 #Elastic Search configuration
+elasticsearch.engine.mode=embedded
+
 elasticsearch.indexNamePrefix=tatami
 elasticsearch.cluster.name=tatamiCluster
 elasticsearch.cluster.nodes=127.0.0.1
 elasticsearch.cluster.default.communication.port=9300
-
-#Lucene configuration
-lucene.path=target/lucene
-lucene.language=French
