Put Cassandra in test scope

--- a/pom.xml
+++ b/pom.xml
@@ -884,6 +884,7 @@
                     <artifactId>jetty-util</artifactId>
                 </exclusion>
             </exclusions>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
